--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,25 +1,26 @@
 name: Ruby
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        ruby_version: [2.3.x, 2.4.x, 2.5.x, 2.6.x]
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Ruby 2.3
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.3.x
-    - name: Bundle install
-      run: |
-        gem install bundler:1.17.3 --no-document
-        bundle install --jobs 4 --retry 3
-    - name: Rubocop
-      run: |
-        bundle exec rubocop
-    - name: Rspec
-      run: |
-        bundle exec rspec
+      - uses: actions/checkout@v1
+      - name: Set up Ruby ${{ matrix.ruby_version }}
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby_version }}
+      - name: Bundle install
+        run: |
+          gem install bundler:1.17.3 --no-document
+          bundle install --jobs 4 --retry 3
+      - name: Rubocop
+        run: |
+          bundle exec rubocop
+      - name: Rspec
+        run: |
+          bundle exec rspec
